--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+
 
     implementation libs.appcompat
     implementation libs.material
@@ -41,13 +45,13 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation libs.recyclerview
+    implementation libs.adapter.rxjava3
+    implementation libs.converter.gson
+    implementation libs.retrofit
+    implementation libs.rxjava
+    implementation libs.rxandroid
 }
