--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,15 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.gridlayout
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     compileOnly libs.lombok
     annotationProcessor libs.lombok
 
+    implementation libs.lifecycle.viewmodel.ktx.v251
+    implementation libs.lifecycle.livedata.ktx
     implementation libs.fragment.ktx
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.recyclerview
