--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     implementation libs.rxjava
     implementation libs.rxandroid
 
+    //Glide
+    implementation libs.glide
+    annotationProcessor libs.compiler
+
     //Dagger
     implementation libs.javax.inject
     implementation libs.dagger
