--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,7 @@ dependencies {
     implementation libs.rxandroid
 
     //Glide
-    implementation libs.glide
-    annotationProcessor libs.compiler
+    implementation libs.picasso
 
     //Dagger
     implementation libs.javax.inject
