--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,12 @@
 [versions]
 adapterRxjava3 = "2.9.0"
 agp = "8.5.1"
+compiler = "4.12.0"
 converterGson = "2.9.0"
 daggerAndroid = "2.52"
 fragmentKtx = "1.8.1"
 glide = "4.15.1"
+glideVersion = "4.12.0"
 gradle = "3.6.4"
 javaxInject = "1"
 junit = "4.13.2"
@@ -18,6 +20,8 @@ material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
 picasso = "2.8"
+roomRuntime = "2.6.1"
+roomCompiler = "2.6.1"
 rxandroid = "3.0.0"
 recyclerview = "1.3.2"
 rxjava = "3.1.3"
@@ -34,6 +38,7 @@ dagger-android-support = { module = "com.google.dagger:dagger-android-support", 
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerAndroid" }
 fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-v4120 = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -48,7 +53,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+picasso-gif = { module = "com.squareup.picasso:picasso-gif", version.ref = "picasso" }
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
 rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "adapterRxjava3" }
