--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,6 @@ android {
 }
 
 dependencies {
-
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -64,16 +62,17 @@ dependencies {
     implementation libs.picasso
 
     //Glide
-    implementation libs.glide // Убедитесь, что используете актуальную версию
+    implementation libs.glide
     annotationProcessor libs.compiler
 
     //Room
     implementation libs.room.runtime
-    implementation "androidx.room:room-rxjava3:2.6.1"
+    implementation libs.room.rxjava3
     annotationProcessor libs.room.compiler
 
     //Dagger
     implementation libs.javax.inject
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
+
 }
