--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 adapterRxjava3 = "2.9.0"
-agp = "8.5.1"
+agp = "8.5.2"
 compiler = "4.12.0"
 converterGson = "2.9.0"
 daggerAndroid = "2.52"
-fragmentKtx = "1.8.1"
+fragmentKtx = "1.8.2"
 glide = "4.15.1"
-glideVersion = "4.12.0"
+glideVersion = "4.15.1"
 gradle = "3.6.4"
 javaxInject = "1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-appcompat = "1.6.1"
-lifecycleViewmodelKtx = "2.8.3"
-lifecycleViewmodelKtxVersion = "2.5.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+appcompat = "1.7.0"
+lifecycleViewmodelKtx = "2.8.4"
+lifecycleViewmodelKtxVersion = "2.8.4"
 lombok = "1.18.20"
-material = "1.10.0"
-activity = "1.8.0"
+material = "1.12.0"
+activity = "1.9.1"
 constraintlayout = "2.1.4"
 picasso = "2.8"
 roomRuntime = "2.6.1"
@@ -57,6 +57,7 @@ picasso-gif = { module = "com.squareup.picasso:picasso-gif", version.ref = "pica
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+room-rxjava3 = { module = "androidx.room:room-rxjava3", version.ref = "roomRuntime" }
 rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
 rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "adapterRxjava3" }
